# nam-box

./: .gitignore  .pre-commit-config.yaml  CLOUDFLARE_TUNNEL_SETUP.md  JACK_DOCKER_FINDINGS.md  LICENSE  PlayingAudioStreamWebpage.md  README.md  VERSION  WEBPLAYER_FIXES.md  build  docker-bake.hcl  jalv-lv2-neural-amp-modeler-setup.md  local.docker-bake.hcl  mender-docker-lifecycle-helper  mender-docker-lifecycle-helper_comp  requirements.txt  tmp_docker_config.json
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer-bake.hcl  devcontainer.json  initialize  nam-box.hcl
.github/: CODEOWNERS  settings.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: push-workflow.yaml
docs/: IMPLEMENTATION.md  InterfacingWithJackTripServer.md  WEBTRANSPORT_DEBUG_REPORT.md  WEBTRANSPORT_GUIDE.md  bluetooth-manager-api.md  cloudflare-dns-approach.md  cloudflare-full-tls-approach.md  iot-preinstalled-certificates.md  local-https-strategy.md  patch-set-atom-path-nam.md  turn-server-setup.md  udp2raw-webtransport.md  webtransport-client-fixes.md  webtransport-settings-frame-exchange.md  webtransport-vs-webrtc.md
manifests/: default.env  docker-compose.yaml
manifests/nam-box/: docker-compose-with-build.yaml  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml
manifests/partials/: bluetooth-mock.nginx.conf  certs.yaml  core.yaml  hardware.yaml  mock-hardware.yaml  proxy.yaml  web.yaml
manifests/test-dev/: docker-compose.yaml
manifests/test-hardware/: docker-compose.yaml
nginx/manifests/: docker-compose.yaml
services/bluetooth-host/: Dockerfile  bluezuser.conf  docker-entrypoint.sh  entrypoint
services/bluetooth-manager/: Dockerfile  TROUBLESHOOTING.md  bleak-api-bkp.py  bleak-api.py  main.py  requirements.txt
services/bluetooth-mock/: Dockerfile  mock_bleak_api.py  requirements.txt
services/certs/: Dockerfile
services/core/: Dockerfile  entrypoint.sh  jalv_realtime_extension.c  main.py  nam_fifo_control.py  nam_realtime_control.py  test_nam_control.py  test_patch_set.py
services/jack/: Dockerfile
services/jack-bazel/: BUILD.bazel  Dockerfile  MODULE.bazel  bazel-bin  bazel-jack-bazel  bazel-out  bazel-testlogs
services/jacktrip/: Dockerfile
services/jalv/: Dockerfile
services/mod-host/: Dockerfile  entrypoint.sh  main.py
services/mod-ui/: Dockerfile
services/nam/: Dockerfile
services/nam-bazel/: BAZEL_SETUP_NOTES.md  BUILD.bazel  Dockerfile  MODULE.bazel
services/nam-jalv/: BUILD.bazel  CROSS_COMPILATION_BEST_PRACTICES.md  DEPENDENCY_GRAPH.md  Dockerfile  MODULE.bazel  bazel-bin  bazel-nam-jalv  bazel-out  bazel-testlogs
services/proxy/: Dockerfile  nginx.conf
services/web/: .dockerignore  Dockerfile  astro.config.mjs  nginx.conf  package.json  tailwind.config.js
services/web/src/layouts/: Layout.astro
services/web/src/pages/: bluetooth.astro  index.astro
services/webpages/: Dockerfile  nginx.conf
services/webpages/pages/: bluetooth-manager.html  index.html  nam-box-player.html
services/webplayer/: Dockerfile  index-webrtc.html  index.html  nginx.conf
test/: device-test  device-test-hardware  local-application-test  local-client-test  prep-cloudflared  run-jacktrip-test.sh
test/.cloudflared/: template.config.yml
