package(default_visibility = ["//visibility:public"])

# LLVM toolchain platform for AMD64
platform(
    name = "amd64_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

# LLVM toolchain platform for ARM64
platform(
    name = "arm64_platform",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)
