load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

# Alias for the NAM-LV2 plugin
alias(
    name = "nam_lv2_plugin",
    actual = "@nam_lv2//:neural_amp_modeler",
)

# Jalv LV2 host executable
alias(
    name = "jalv",
    actual = "@jalv//:jalv",
)

# Jalv source files
alias(
    name = "jalv_srcs",
    actual = "@jalv//:jalv_srcs",
)